@@ -109,7 +109,7 @@ static int watchdogExit = 0; /* Watchdog loop toggle */
 int
 Ns_Main(int argc, char **argv, Ns_ServerInitProc *initProc)
 {
-    int       fd, i, sig, optind, cmdargc;
+    int       retcode, fd, i, sig, optind, cmdargc;
     char    **cmdargv;
     char     *config;
     Ns_Time   timeout;
@@ -801,6 +801,7 @@ Ns_Main(int argc, char **argv, Ns_ServerInitProc *initProc)
     NsWaitJobsShutdown(&timeout);
     NsWaitShutdownProcs(&timeout);
 
+
     /*
      * Finally, execute the exit procs directly.  Note that
      * there is not timeout check for the exit procs so they
@@ -818,11 +819,16 @@ Ns_Main(int argc, char **argv, Ns_ServerInitProc *initProc)
     StatusMsg(3);
 
     /*
-     * The server exits gracefully on NS_SIGTERM.
+     * The main thread exits gracefully on NS_SIGTERM.
      * All other signals are propagated to the caller.
+     * We call Tcl_ExitThread() here in order to pull
+     * registered exit handlers and trigger cleanup of
+     * the TLS storage for the current (main) thread.
      */
 
-    return (sig == NS_SIGTERM) ? 0 : sig;
+    Tcl_ExitThread((sig == NS_SIGTERM) ? 0 : sig);
+
+    return 0; /* Never reached */
 }
 
 
